frb_rust/src/dart_api_dl/include/dart_api.h


typedef struct _Dart_Handle* Dart_Handle;
typedef Dart_Handle Dart_PersistentHandle;
typedef struct _Dart_WeakPersistentHandle* Dart_WeakPersistentHandle;
DART_EXPORT bool Dart_IsError(Dart_Handle handle);
DART_EXPORT bool Dart_IsApiError(Dart_Handle handle);
DART_EXPORT bool Dart_IsUnhandledExceptionError(Dart_Handle handle);
DART_EXPORT bool Dart_IsCompilationError(Dart_Handle handle);
DART_EXPORT bool Dart_IsFatalError(Dart_Handle handle);
DART_EXPORT const char* Dart_GetError(Dart_Handle handle);
DART_EXPORT bool Dart_ErrorHasException(Dart_Handle handle);
DART_EXPORT Dart_Handle Dart_ErrorGetException(Dart_Handle handle);
DART_EXPORT Dart_Handle Dart_ErrorGetStackTrace(Dart_Handle handle);
DART_EXPORT void Dart_PropagateError(Dart_Handle handle);
DART_EXPORT Dart_Handle Dart_ToString(Dart_Handle object);
DART_EXPORT void Dart_DeletePersistentHandle(Dart_PersistentHandle object);
DART_EXPORT void Dart_EnterScope(void);
DART_EXPORT void Dart_ExitScope(void);
DART_EXPORT Dart_Handle Dart_NewBoolean(bool value);
DART_EXPORT Dart_Handle Dart_StringLength(Dart_Handle str, intptr_t* length);
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle
Dart_Invoke(Dart_Handle target,
            Dart_Handle name,
            int number_of_arguments,
            Dart_Handle* arguments);
DART_EXPORT Dart_Handle Dart_ThrowException(Dart_Handle exception);
typedef struct _Dart_NativeArguments* Dart_NativeArguments;
DART_EXPORT Dart_Handle Dart_GetNativeArgument(Dart_NativeArguments args,
                                               int index);
DART_EXPORT void Dart_SetReturnValue(Dart_NativeArguments args,
                                     Dart_Handle retval);