dart_sys/src/lib.rs


#[doc = " An object reference managed by the Dart VM garbage collector."]
#[doc = ""]
#[doc = " Because the garbage collector may move objects, it is unsafe to"]
#[doc = " refer to objects directly. Instead, we refer to objects through"]
#[doc = " handles, which are known to the garbage collector and updated"]
#[doc = " automatically when the object is moved. Handles should be passed"]
#[doc = " by value (except in cases like out-parameters) and should never be"]
#[doc = " allocated on the heap."]
#[doc = ""]
#[doc = " Most functions in the Dart Embedding API return a handle. When a"]
#[doc = " function completes normally, this will be a valid handle to an"]
#[doc = " object in the Dart VM heap. This handle may represent the result of"]
#[doc = " the operation or it may be a special valid handle used merely to"]
#[doc = " indicate successful completion. Note that a valid handle may in"]
#[doc = " some cases refer to the null object."]
#[doc = ""]
#[doc = " --- Error handles ---"]
#[doc = ""]
#[doc = " When a function encounters a problem that prevents it from"]
#[doc = " completing normally, it returns an error handle (See Dart_IsError)."]
#[doc = " An error handle has an associated error message that gives more"]
#[doc = " details about the problem (See Dart_GetError)."]
#[doc = ""]
#[doc = " There are four kinds of error handles that can be produced,"]
#[doc = " depending on what goes wrong:"]
#[doc = ""]
#[doc = " - Api error handles are produced when an api function is misused."]
#[doc = "   This happens when a Dart embedding api function is called with"]
#[doc = "   invalid arguments or in an invalid context."]
#[doc = ""]
#[doc = " - Unhandled exception error handles are produced when, during the"]
#[doc = "   execution of Dart code, an exception is thrown but not caught."]
#[doc = "   Prototypically this would occur during a call to Dart_Invoke, but"]
#[doc = "   it can occur in any function which triggers the execution of Dart"]
#[doc = "   code (for example, Dart_ToString)."]
#[doc = ""]
#[doc = "   An unhandled exception error provides access to an exception and"]
#[doc = "   stacktrace via the functions Dart_ErrorGetException and"]
#[doc = "   Dart_ErrorGetStackTrace."]
#[doc = ""]
#[doc = " - Compilation error handles are produced when, during the execution"]
#[doc = "   of Dart code, a compile-time error occurs.  As above, this can"]
#[doc = "   occur in any function which triggers the execution of Dart code."]
#[doc = ""]
#[doc = " - Fatal error handles are produced when the system wants to shut"]
#[doc = "   down the current isolate."]
#[doc = ""]
#[doc = " --- Propagating errors ---"]
#[doc = ""]
#[doc = " When an error handle is returned from the top level invocation of"]
#[doc = " Dart code in a program, the embedder must handle the error as they"]
#[doc = " see fit.  Often, the embedder will print the error message produced"]
#[doc = " by Dart_Error and exit the program."]
#[doc = ""]
#[doc = " When an error is returned while in the body of a native function,"]
#[doc = " it can be propagated up the call stack by calling"]
#[doc = " Dart_PropagateError, Dart_SetReturnValue, or Dart_ThrowException."]
#[doc = " Errors should be propagated unless there is a specific reason not"]
#[doc = " to.  If an error is not propagated then it is ignored.  For"]
#[doc = " example, if an unhandled exception error is ignored, that"]
#[doc = " effectively \"catches\" the unhandled exception.  Fatal errors must"]
#[doc = " always be propagated."]
#[doc = ""]
#[doc = " When an error is propagated, any current scopes created by"]
#[doc = " Dart_EnterScope will be exited."]
#[doc = ""]
#[doc = " Using Dart_SetReturnValue to propagate an exception is somewhat"]
#[doc = " more convenient than using Dart_PropagateError, and should be"]
#[doc = " preferred for reasons discussed below."]
#[doc = ""]
#[doc = " Dart_PropagateError and Dart_ThrowException do not return.  Instead"]
#[doc = " they transfer control non-locally using a setjmp-like mechanism."]
#[doc = " This can be inconvenient if you have resources that you need to"]
#[doc = " clean up before propagating the error."]
#[doc = ""]
#[doc = " When relying on Dart_PropagateError, we often return error handles"]
#[doc = " rather than propagating them from helper functions.  Consider the"]
#[doc = " following contrived example:"]
#[doc = ""]
#[doc = " 1    Dart_Handle isLongStringHelper(Dart_Handle arg) {"]
#[doc = " 2      intptr_t* length = 0;"]
#[doc = " 3      result = Dart_StringLength(arg, &length);"]
#[doc = " 4      if (Dart_IsError(result)) {"]
#[doc = " 5        return result"]
#[doc = " 6      }"]
#[doc = " 7      return Dart_NewBoolean(length > 100);"]
#[doc = " 8    }"]
#[doc = " 9"]
#[doc = " 10   void NativeFunction_isLongString(Dart_NativeArguments args) {"]
#[doc = " 11     Dart_EnterScope();"]
#[doc = " 12     AllocateMyResource();"]
#[doc = " 13     Dart_Handle arg = Dart_GetNativeArgument(args, 0);"]
#[doc = " 14     Dart_Handle result = isLongStringHelper(arg);"]
#[doc = " 15     if (Dart_IsError(result)) {"]
#[doc = " 16       FreeMyResource();"]
#[doc = " 17       Dart_PropagateError(result);"]
#[doc = " 18       abort();  // will not reach here"]
#[doc = " 19     }"]
#[doc = " 20     Dart_SetReturnValue(result);"]
#[doc = " 21     FreeMyResource();"]
#[doc = " 22     Dart_ExitScope();"]
#[doc = " 23   }"]
#[doc = ""]
#[doc = " In this example, we have a native function which calls a helper"]
#[doc = " function to do its work.  On line 5, the helper function could call"]
#[doc = " Dart_PropagateError, but that would not give the native function a"]
#[doc = " chance to call FreeMyResource(), causing a leak.  Instead, the"]
#[doc = " helper function returns the error handle to the caller, giving the"]
#[doc = " caller a chance to clean up before propagating the error handle."]
#[doc = ""]
#[doc = " When an error is propagated by calling Dart_SetReturnValue, the"]
#[doc = " native function will be allowed to complete normally and then the"]
#[doc = " exception will be propagated only once the native call"]
#[doc = " returns. This can be convenient, as it allows the C code to clean"]
#[doc = " up normally."]
#[doc = ""]
#[doc = " The example can be written more simply using Dart_SetReturnValue to"]
#[doc = " propagate the error."]
#[doc = ""]
#[doc = " 1    Dart_Handle isLongStringHelper(Dart_Handle arg) {"]
#[doc = " 2      intptr_t* length = 0;"]
#[doc = " 3      result = Dart_StringLength(arg, &length);"]
#[doc = " 4      if (Dart_IsError(result)) {"]
#[doc = " 5        return result"]
#[doc = " 6      }"]
#[doc = " 7      return Dart_NewBoolean(length > 100);"]
#[doc = " 8    }"]
#[doc = " 9"]
#[doc = " 10   void NativeFunction_isLongString(Dart_NativeArguments args) {"]
#[doc = " 11     Dart_EnterScope();"]
#[doc = " 12     AllocateMyResource();"]
#[doc = " 13     Dart_Handle arg = Dart_GetNativeArgument(args, 0);"]
#[doc = " 14     Dart_SetReturnValue(isLongStringHelper(arg));"]
#[doc = " 15     FreeMyResource();"]
#[doc = " 16     Dart_ExitScope();"]
#[doc = " 17   }"]
#[doc = ""]
#[doc = " In this example, the call to Dart_SetReturnValue on line 14 will"]
#[doc = " either return the normal return value or the error (potentially"]
#[doc = " generated on line 3).  The call to FreeMyResource on line 15 will"]
#[doc = " execute in either case."]
#[doc = ""]
#[doc = " --- Local and persistent handles ---"]
#[doc = ""]
#[doc = " Local handles are allocated within the current scope (see"]
#[doc = " Dart_EnterScope) and go away when the current scope exits. Unless"]
#[doc = " otherwise indicated, callers should assume that all functions in"]
#[doc = " the Dart embedding api return local handles."]
#[doc = ""]
#[doc = " Persistent handles are allocated within the current isolate. They"]
#[doc = " can be used to store objects across scopes. Persistent handles have"]
#[doc = " the lifetime of the current isolate unless they are explicitly"]
#[doc = " deallocated (see Dart_DeletePersistentHandle)."]
#[doc = " The type Dart_Handle represents a handle (both local and persistent)."]
#[doc = " The type Dart_PersistentHandle is a Dart_Handle and it is used to"]
#[doc = " document that a persistent handle is expected as a parameter to a call"]
#[doc = " or the return value from a call is a persistent handle."]
pub type Dart_Handle = *mut _Dart_Handle;
pub type Dart_PersistentHandle = Dart_Handle;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Dart_WeakPersistentHandle {
    _unused: [u8; 0],
}

pub type Dart_WeakPersistentHandle = *mut _Dart_WeakPersistentHandle;
pub type Dart_WeakPersistentHandleFinalizer = ::std::option::Option<
    unsafe extern "C" fn(
        isolate_callback_data: *mut ::std::os::raw::c_void,
        handle: Dart_WeakPersistentHandle,
        peer: *mut ::std::os::raw::c_void,
    ),
>;

extern "C" {
    #[doc = " Is this an error handle?"]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_IsError(handle: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Is this an api error handle?"]
    #[doc = ""]
    #[doc = " Api error handles are produced when an api function is misused."]
    #[doc = " This happens when a Dart embedding api function is called with"]
    #[doc = " invalid arguments or in an invalid context."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_IsApiError(handle: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Is this an unhandled exception error handle?"]
    #[doc = ""]
    #[doc = " Unhandled exception error handles are produced when, during the"]
    #[doc = " execution of Dart code, an exception is thrown but not caught."]
    #[doc = " This can occur in any function which triggers the execution of Dart"]
    #[doc = " code."]
    #[doc = ""]
    #[doc = " See Dart_ErrorGetException and Dart_ErrorGetStackTrace."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_IsUnhandledExceptionError(handle: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Is this a compilation error handle?"]
    #[doc = ""]
    #[doc = " Compilation error handles are produced when, during the execution"]
    #[doc = " of Dart code, a compile-time error occurs.  This can occur in any"]
    #[doc = " function which triggers the execution of Dart code."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_IsCompilationError(handle: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Is this a fatal error handle?"]
    #[doc = ""]
    #[doc = " Fatal error handles are produced when the system wants to shut down"]
    #[doc = " the current isolate."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_IsFatalError(handle: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Gets the error message from an error handle."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\return A C string containing an error message if the handle is"]
    #[doc = "   error. An empty C string (\"\") if the handle is valid. This C"]
    #[doc = "   String is scope allocated and is only valid until the next call"]
    #[doc = "   to Dart_ExitScope."]
    pub fn Dart_GetError(handle: Dart_Handle) -> *const ::std::os::raw::c_char;
}

extern "C" {
    #[doc = " Is this an error handle for an unhandled exception?"]
    pub fn Dart_ErrorHasException(handle: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Gets the exception Object from an unhandled exception error handle."]
    pub fn Dart_ErrorGetException(handle: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the stack trace Object from an unhandled exception error handle."]
    pub fn Dart_ErrorGetStackTrace(handle: Dart_Handle) -> Dart_Handle;
}
